<resources>
    <string name="app_name">Find My Coso</string>

    <string name="title_activity_welcome">Welcome</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="ca_foscari_logo">Ca\' Foscari Logo</string>
    <string name="benvenuto_in_find_my_coso">Benvenuto in \nFind My Coso</string>
    <string name="filippo_camoli">Filippo Camoli</string>
    <string name="sviluppata_da">Sviluppata da</string>
    <string name="universit_ca_foscari_di_venezia">Università Ca\' Foscari \ndi Venezia</string>
    <string name="app_logo">App Logo</string>
    <string name="permessi">Permessi</string>
    <string name="per_poter_utilizzare_l_applicazione_necessario_il_consenso_dei_permessi_nclicca_sul_pulsante_ottieni_permessi_per_richiederli">Per poter utilizzare l\'applicazione è necessario il consenso dei permessi.\nClicca sul pulsante \'Ottieni Permessi\' per richiederli.</string>
    <string name="ottieni_permessi">Ottieni Permessi</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="puoi_abilitare_o_disabiitare_la_dark_mode_ndi_default_vengono_applicate_le_impostazioni_del_dispositivo">Puoi abilitare o disabiitare la dark mode.\nDi default, vengono applicate le impostazioni del dispositivo.</string>
    <string name="find_my_coso">Find My Coso</string>
    <string name="next">Next</string>
    <string name="avanti">Avanti</string>
    <string name="salta">Salta</string>
    <string name="benvenuto">Benvenuto in</string>
    <string name="in_questa_applicazione_potrai_localizzare_i_tuoi_dispositivi_android">In questa applicazione, potrai localizzare i tuoi dispositivi Android™</string>
    <string name="tutto_tramite_un_solo_account">…Tutto tramite un solo account!</string>
    <string name="per_ulteriori_informazioni_visita">Per ulteriori informazioni visita:</string>
    <string name="camoli_ns0_it">camoli.ns0.it</string>
    <string name="user_icon">User icon</string>
    <string name="text_logo">text_logo</string>
    <string name="localizza_i_tuoi_dispositivi">Localizza i tuoi dispositivi</string>
    <string name="todo">TODO</string>
    <string name="consultare_lo_storico_delle_loro_posizioni">Consultare lo storico delle loro posizioni…</string>
    <string name="todofhgfh">TODOfhgfh</string>
    <string name="label_login">Login</string>
    <string name="label_register">Registrazione</string>
    <string name="title_activity_login">Login</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login_uppercase">LOGIN</string>
    <string name="non_ricordi_la_password">Non ricordi la password?</string>
    <string name="accedi">Accedi</string>
    <string name="signup_label">Registrati</string>
    <string name="registrazione">Registrazione</string>
    <string name="hai_gi_un_account">Hai già un account?</string>
    <string name="sign_up">SIGN UP</string>
    <string name="ripeti_password">Ripeti password</string>
    <string name="conferma_registrazione">Conferma registrazione</string>
    <string name="title_activity_main">Home</string>
    <string name="nome">Nome</string>
    <string name="salva">Salva</string>
    <string name="vai_a_home">Vai a HOME</string>
    <string name="logout">Logout</string>
    <string name="account_explanation">Puoi modificare foto profilo e nome, basta premere sul pulsante \'Aggiorna Profilo\'.</string>
    <string name="aggiorna_profilo">Aggiorna profilo</string>
    <string name="controlla_la_tua_mail">Controlla la tua Mail!</string>
    <string name="torna_al_login">Torna al login</string>
    <string name="ok_torna_al_login">ok, torna al login!</string>
    <string name="non_hai_ricevuto_la_mail">Non hai ricevuto la mail?</string>
    <string name="esempio_dominio_it">esempio@dominio.it</string>
    <string name="per_poter_usare_l_applicazione_ndevi_convalidare_la_tua_email_fornita_durante_la_fase_di_registrazione">Per poter usare l\'applicazione,\ndevi convalidare la tua email fornita durante la fase di registrazione:</string>
    <string name="email_logo">Email logo</string>
    <string name="title_activity_maps">Map</string>
    <string name="ultime_posizioni_dei_tuoi_dispositivi">Ultime posizioni dei tuoi dispositivi</string>
    <string name="questo_dispositivo">Questo dispositivo,</string>
    <string name="non">NON è</string>
    <string name="registrato_nel_tuo_account">registrato nel tuo account.</string>
    <string name="per_poter_registrare_le_posizioni_di_questo_dispositivo_devi_aggiungerlo_al_tuo_account">Per poter registrare le posizioni di questo dispositivo, devi aggiungerlo al tuo account.</string>
    <string name="uuid">UUID:</string>
    <string name="nome_del_dispositivo">Nome del dispositivo</string>
    <string name="registra_dispositivo">Registra dispositivo</string>
    <string name="clicca_sull_immagine_sottostante_per_selezionare_una_foto_profilo">Clicca sull\'immagine sottostante per selezionare una foto profilo.</string>
    <string name="account">Account</string>
    <string name="title_activity_provaprovaprova">provaprovaprova</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="annulla">Annulla</string>
    <string name="invia">Invia</string>
    <string name="reset_password">Reset password</string>
    <string name="mappa_posizioni">Mappa posizioni</string>
    <string name="nome_dispositivo">Nome Dispositivo</string>
    <string name="smartphone_icon">smartphone icon</string>
    <string name="id_dispositivo">Id dispositivo</string>
    <string name="sei_il_proprietario_di_questo_dispositivo">Sei il proprietario di questo\ndispositivo.</string>
    <string name="blank" />
    <string name="dispositivo_aggiunto_da_qr">Dispositivo aggiunto da QR</string>
    <string name="cronologia_posizioni">Cronologia posizioni</string>
    <string name="ok">OK</string>
    <string name="cancella_tutto">Cancella tutto</string>
    <string name="chiudi_cronologia">Chiudi cronologia</string>
    <string name="nome_della_via">Nome della via</string>
    <string name="_24_aprile_2020_alle_15_22">24 Aprile 2020 alle 15:22</string>
    <string name="chiudi">Chiudi</string>
    <string name="registra_il_dispositivo">Registra il dispositivo.</string>
    <string name="posizione_cancellata">Posizione cancellata.</string>
    <string name="qr">QR</string>
    <string name="qr_explanation">Il tuo dispositivo è identificato da questo codice QR univoco. \n\n Condividi la posizione di questo dispositivo con conoscenti utilizzando questo codice.</string>
    <string name="scannerizza_qr">Scannerizza QR</string>
    <string name="scan_qr_code">Scan QR Code</string>
    <string name="qr_code_del_dispositivo_corrente">QR code del dispositivo corrente.</string>
    <string name="autofocus">Autofocus</string>
    <string name="email_proprietario">Email proprietario</string>
    <string name="qr_code_device_to_add">Qr code device to add</string>
    <string name="aggiungi_dispositivo_ai_preferiti">Aggiungi dispositivo ai preferiti</string>
    <string name="aggiungi_ai_preferiti">Aggiungi ai preferiti</string>
    <string name="gia_salvato">Già salvato.</string>
    <string name="salvato">Salvato</string>
    <string name="nome_dispositivo_locations">(Nome dispositivo)</string>
    <string name="mappa">Mappa</string>
    <string name="esci">Esci</string>
    <string name="impostazioni">Impostazioni</string>
    <string name="altro">Altro</string>
    <string name="qr_code">QR code</string>
    <string name="nome_utente">Nome utente</string>
    <string name="title_activity_home">Home</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

    <string name="home_second">Home Second</string>
    <string name="apri_menu">Apri menù laterale</string>
    <string name="chiudi_menu">Chiudi menù laterale</string>
    <string name="title_activity_prova123">prova123</string>
    <string name="qr_code_scanner">QR Code Scanner</string>
    <string name="aiuto">Aiuto</string>
    <string name="men">Menù</string>
    <string name="pulsante_men">Pulsante menù</string>
    <string name="tieni_premuto_sul_qr_per_salvare_in_galleria">Tieni premuto sul QR per salvare in galleria.</string>
    <string name="aiuto_info"><![CDATA[Aiuto & Info]]></string>
    <string name="aiuto_e_informazioni">Aiuto e informazioni</string>
    <string name="elimina_dispositivo">Elimina dispositivo</string>
    <string name="app_name_SE">Find My Coso SE</string>
</resources>
