<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/slide4"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/backgroundcolor"
    android:gravity="center"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="50dp"
        android:text="@string/tutto_tramite_un_solo_account"
        android:textAlignment="center"
        android:textColor="?attr/textcolor"
        android:textSize="18sp" />

    <ImageView
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:layout_gravity="center"
        android:layout_marginBottom="50dp"
        android:contentDescription="@string/user_icon"
        android:src="@mipmap/user" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/per_ulteriori_informazioni_visita"
        android:textAlignment="center"
        android:textColor="?attr/textcolor"
        android:textSize="18sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/camoli_ns0_it"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="?attr/textcolor"
        android:textSize="18sp"
        android:textStyle="bold" />

</LinearLayout>