<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:background="@color/colorPrimaryDark">

    <TextView
        android:id="@+id/resetlabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/reset_password"
        android:layout_marginBottom="5dp"
        android:textStyle="bold"
        android:textColor="@color/colorAccent"
        android:textSize="19sp"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"/>

    <EditText
        android:id="@+id/email_password_reset"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/resetlabel"
        android:hint="@string/email"
        android:textColorHint="@android:color/darker_gray"
        android:backgroundTint="@android:color/white"
        />

    <Button
        android:id="@+id/abort"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/annulla"
        android:textAllCaps="false"
        android:layout_below="@id/email_password_reset"
        android:layout_alignStart="@id/email_password_reset"
        android:layout_marginTop="10dp"
        android:textSize="16sp"
        android:background="@drawable/rounded_button_grey"
        android:textColor="@color/colorAccent"
        android:textStyle="bold"/>

    <Button
        android:id="@+id/send"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/invia"
        android:textAllCaps="false"
        android:layout_below="@id/email_password_reset"
        android:layout_alignEnd="@id/email_password_reset"
        android:layout_marginTop="10dp"
        android:textSize="16sp"
        android:background="@drawable/rounded_button_grey"
        android:textColor="@color/colorAccent"
        android:textStyle="bold"/>
</RelativeLayout>