<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/slide1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="70dp"
        android:layout_marginBottom="30dp"
        android:text="@string/benvenuto"
        android:textAlignment="center"
        android:autoSizeTextType="uniform"
        android:autoSizeMinTextSize="20dp"
        android:textSize="30sp"
        android:autoSizeMaxTextSize="40sp"
        android:textColor="@android:color/white"
        android:textStyle="bold" />

    <com.airbnb.lottie.LottieAnimationView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:lottie_autoPlay="true"
        android:id="@+id/animation_logo"
        app:lottie_loop="true"
        app:lottie_fileName="logo_animation.json"
        android:layout_gravity="center"
        android:layout_marginBottom="20dp"
        android:forceHasOverlappingRendering="true"/>

    <ImageView
        android:visibility="gone"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_gravity="center"
        android:layout_marginBottom="20dp"
        android:contentDescription="@string/todo"
        android:src="@mipmap/logo_transparent_img_only" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:text="@string/find_my_coso"
        android:textAlignment="center"
        android:textColor="@android:color/white"
        android:autoSizeTextType="uniform"
        android:autoSizeMaxTextSize="45sp"
        android:autoSizeMinTextSize="30sp"
        android:textSize="40sp"
        android:textStyle="bold|italic" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/localizza_i_tuoi_dispositivi"
        android:textColor="@android:color/white"
        android:textAlignment="center"
        android:autoSizeTextType="uniform"
        android:autoSizeMaxTextSize="25dp"
        android:autoSizeMinTextSize="15dp"
        android:textSize="18sp"
        android:textStyle="italic" />

</LinearLayout>