<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/contenitore"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activities.Login"
    android:background="@drawable/background_login"
    android:fitsSystemWindows="true">

    <TextView
        android:id="@+id/login_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/accedi"
        android:textColor="@android:color/white"
        android:textAlignment="center"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:textStyle="bold"
        android:textSize="20sp"/>

    <ImageView
        android:id="@+id/app_logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/login_label"
        android:layout_above="@+id/email_input_layout"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:contentDescription="@string/app_logo"
        android:src="@mipmap/logo_transparent_img_only" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/email_input_layout"
        android:layout_width="270dp"
        android:textColorHint="@android:color/darker_gray"
        android:layout_centerHorizontal="true"
        android:layout_height="wrap_content"
        app:errorEnabled="true"
        android:layout_above="@id/password_input_layout">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/text_input_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:hint="@string/email"
            android:layout_centerHorizontal="true"
            android:backgroundTint="@android:color/white"
            android:textColor="@android:color/white"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/password_input_layout"
        android:layout_width="270dp"
        android:textColorHint="@android:color/darker_gray"
        android:layout_centerHorizontal="true"
        android:layout_height="wrap_content"
        app:errorEnabled="true"
        android:layout_centerInParent="true">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/text_input_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:hint="@string/password"
            android:layout_centerHorizontal="true"
            android:textColorHint="@android:color/darker_gray"
            android:backgroundTint="@android:color/white"
            android:textColor="@android:color/white"/>
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/login_button"
        android:layout_width="210dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/password_input_layout"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:background="@drawable/rounded_button"
        android:ems="10"
        android:text="@string/login_uppercase"
        android:textAlignment="center"
        android:textColor="@android:color/white"
        android:enabled="false"/>

    <ProgressBar
        android:id="@+id/progress_bar"
        android:layout_centerHorizontal="true"
        android:layout_alignBottom="@+id/login_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="invisible"
        />


    <Button
        android:id="@+id/reset_password"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/login_button"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="5dp"
        android:background="@android:color/transparent"
        android:text="@string/non_ricordi_la_password"
        android:textAllCaps="false"
        android:textAlignment="center"
        android:textColor="@android:color/white" />

    <Button
        android:id="@+id/signup_button"
        android:layout_width="210dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/reset_password"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:background="@drawable/rounded_button_alt"
        android:ems="10"
        android:text="@string/signup_label"
        android:textAlignment="center"
        android:textColor="@android:color/white" />

</RelativeLayout>