<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Impostazioni"
    android:orientation="vertical"
    android:padding="24dp"
    android:background="?attr/backgroundcolor">
    <androidx.cardview.widget.CardView
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:backgroundTint="?attr/boxbackground">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="10dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/permessi"
                android:textColor="?attr/textcolor"
                android:textSize="18sp"
                android:textStyle="bold" />
            <TextView
                android:layout_marginTop="5dp"
                android:textColor="?attr/textcolor"
                android:text="@string/per_poter_utilizzare_l_applicazione_necessario_il_consenso_dei_permessi_nclicca_sul_pulsante_ottieni_permessi_per_richiederli"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"/>

            <Button
                android:id="@+id/get_permissions"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="?attr/buttoncolor"
                android:text="@string/ottieni_permessi"
                android:textColor="#FFFFFF" />

        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_marginTop="10dp"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:backgroundTint="?attr/boxbackground">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="10dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dark_mode"
                android:textColor="?attr/textcolor"
                android:textSize="18sp"
                android:textStyle="bold" />
            <TextView
                android:layout_marginTop="5dp"
                android:textColor="?attr/textcolor"
                android:text="@string/puoi_abilitare_o_disabiitare_la_dark_mode_ndi_default_vengono_applicate_le_impostazioni_del_dispositivo"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"/>

            <Switch
                android:id="@+id/switchDarkMode"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/dark_mode"
                android:textColor="?attr/textcolor" />


        </LinearLayout>
    </androidx.cardview.widget.CardView>
</LinearLayout>

